--- a/ibus-tweaker@tuberry.github.com/stylesheet.css
+++ b/ibus-tweaker@tuberry.github.com/stylesheet.css
@@ -37,7 +37,7 @@
 }
 
 .ibus-tweaker-candidate-popup-boxpointer {
-    -arrow-background-color: transparent;
+    -arroe-background-color: transparent;
     -arrow-border-radius: 12px;
     -arrow-rise: 5px;
 }
@@ -48,7 +48,7 @@
 
 
 .ibus-tweaker-candidate-popup-content {
-    color: rgba(0, 0, 0, 0.9);
+    color: rgba(0, 0, 0, 1);
     background-color: rgba(255, 255, 255, 1);
 }
 
@@ -57,11 +57,11 @@
 }
 
 .ibus-tweaker-candidate-box .ibus-tweaker-candidate-index {
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.6);
 }
 
 .night .ibus-tweaker-candidate-popup-content {
-    color: rgba(255, 255, 255, 0.9);
+    color: rgba(255, 255, 255, 1);
     background-color: rgba(56, 56, 56, 1);
 }
 
@@ -70,7 +70,7 @@
 }
 
 .night .ibus-tweaker-candidate-box .ibus-tweaker-candidate-index {
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.6);
 }
 
 /*
@@ -79,19 +79,19 @@
 
 
 /*
- *  #FC8E9E
+ *  #F1ABC2
  */
 .red .ibus-tweaker-candidate-popup-content,
 .red .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(252, 142, 158, 0.9);
+    border-color: rgba(241, 171, 194, 1);
 }
 
 .red .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(252, 142, 158, 0.5);
+    background-color: rgba(241, 171, 194, 0.6);
 }
 
 .red .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(252, 142, 158, 0.9);
+    background-color: rgba(241, 171, 194, 1);
 }
 
 /*
@@ -99,32 +99,32 @@
  */
 .night-red .ibus-tweaker-candidate-popup-content,
 .night-red .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(222, 49, 99, 0.9);
+    border-color: rgba(222, 49, 99, 1);
 }
 
 .night-red .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(222, 49, 99, 0.5);
+    background-color: rgba(222, 49, 99, 0.6);
 }
 
 .night-red .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(222, 49, 99, 0.9);
+    background-color: rgba(222, 49, 99, 1);
 }
 
 
 /*
- *  #84ED75
+ *  #B1ECB0
  */
 .green .ibus-tweaker-candidate-popup-content,
 .green .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(132, 237, 117, 0.9);
+    border-color: rgba(177, 236, 176, 1);
 }
 
 .green .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(132, 237, 117, 0.5);
+    background-color: rgba(177, 236, 176, 0.6);
 }
 
 .green .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(132, 237, 117, 0.9);
+    background-color: rgba(177, 236, 176, 1);
 }
 
 /*
@@ -132,32 +132,32 @@
  */
 .night-green .ibus-tweaker-candidate-popup-content,
 .night-green .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(44, 165, 42, 0.9);
+    border-color: rgba(44, 165, 42, 1);
 }
 
 .night-green .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(44, 165, 42, 0.5);
+    background-color: rgba(44, 165, 42, 0.6);
 }
 
 .night-green .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(44, 165, 42, 0.9);
+    background-color: rgba(44, 165, 42, 1);
 }
 
 
 /*
- *  #FA986A
+ *  #EBB6AD
  */
 .orange .ibus-tweaker-candidate-popup-content,
 .orange .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(250, 152, 106, 0.9);
+    border-color: rgba(235, 182, 173, 1);
 }
 
 .orange .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(250, 152, 106, 0.5);
+    background-color: rgba(235, 182, 173, 0.6);
 }
 
 .orange .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(250, 152, 106, 0.9);
+    background-color: rgba(235, 182, 173, 1);
 }
 
 /*
@@ -165,32 +165,32 @@
  */
 .night-orange .ibus-tweaker-candidate-popup-content,
 .night-orange .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(211, 84, 57, 0.9);
+    border-color: rgba(211, 84, 57, 1);
 }
 
 .night-orange .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(211, 84, 57, 0.5);
+    background-color: rgba(211, 84, 57, 0.6);
 }
 
 .night-orange .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(211, 84, 57, 0.9);
+    background-color: rgba(211, 84, 57, 1);
 }
 
 
 /*
- *  #58C8FC
+ *  #A7D5F2
  */
 .blue .ibus-tweaker-candidate-popup-content,
 .blue .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(88, 200, 252, 0.9);
+    border-color: rgba(167, 213, 242, 1);
 }
 
 .blue .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(88, 200, 252, 0.5);
+    background-color: rgba(167, 213, 242, 0.6);
 }
 
 .blue .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(88, 200, 252, 0.9);
+    background-color: rgba(167, 213, 242, 1);
 }
 
 /*
@@ -198,32 +198,32 @@
  */
 .night-blue .ibus-tweaker-candidate-popup-content,
 .night-blue .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(18, 136, 228, 0.9);
+    border-color: rgba(18, 136, 228, 1);
 }
 
 .night-blue .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(18, 136, 228, 0.5);
+    background-color: rgba(18, 136, 228, 0.6);
 }
 
 .night-blue .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(18, 136, 228, 0.9);
+    background-color: rgba(18, 136, 228, 1);
 }
 
 
 /*
- *  #EA92E2
+ *  #DFB6E2
  */
 .purple .ibus-tweaker-candidate-popup-content,
 .purple .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(234, 146, 226, 0.9);
+    border-color: rgba(223, 182, 226, 1);
 }
 
 .purple .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(234, 146, 226, 0.5);
+    background-color: rgba(223, 182, 226, 0.6);
 }
 
 .purple .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(234, 146, 226, 0.9);
+    background-color: rgba(223, 182, 226, 1);
 }
 
 /*
@@ -231,32 +231,32 @@
  */
 .night-purple .ibus-tweaker-candidate-popup-content,
 .night-purple .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(169, 65, 180, 0.9);
+    border-color: rgba(169, 65, 180, 1);
 }
 
 .night-purple .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(169, 65, 180, 0.5);
+    background-color: rgba(169, 65, 180, 0.6);
 }
 
 .night-purple .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(169, 65, 180, 0.9);
+    background-color: rgba(169, 65, 180, 1);
 }
 
 
 /*
- *  #5ED2D7
+ *  #ABECED
  */
 .turquoise .ibus-tweaker-candidate-popup-content,
 .turquoise .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(94, 210, 215, 0.9);
+    border-color: rgba(171, 236, 237, 1);
 }
 
 .turquoise .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(94, 210, 215, 0.5);
+    background-color: rgba(171, 236, 237, 0.6);
 }
 
 .turquoise .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(94, 210, 215, 0.9);
+    background-color: rgba(171, 236, 237, 1);
 }
 
 /*
@@ -264,32 +264,32 @@
  */
 .night-turquoise .ibus-tweaker-candidate-popup-content,
 .night-turquoise .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(18, 159, 163, 0.9);
+    border-color: rgba(18, 159, 163, 1);
 }
 
 .night-turquoise .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(18, 159, 163, 0.5);
+    background-color: rgba(18, 159, 163, 0.6);
 }
 
 .night-turquoise .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(18, 159, 163, 0.9);
+    background-color: rgba(18, 159, 163, 1);
 }
 
 
 /*
- *  #BBBBBB
+ *  #CCCCCC
  */
 .grey .ibus-tweaker-candidate-popup-content,
 .grey .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(187, 187, 187, 0.9);
+    border-color: rgba(204, 204, 204, 1);
 }
 
 .grey .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(187, 187, 187, 0.5);
+    background-color: rgba(204, 204, 204, 0.6);
 }
 
 .grey .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(187, 187, 187, 0.9);
+    background-color: rgba(204, 204, 204, 1);
 }
 
 /*
@@ -297,14 +297,14 @@
  */
 .night-grey .ibus-tweaker-candidate-popup-content,
 .night-grey .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(102, 102, 102, 0.9);
+    border-color: rgba(102, 102, 102, 1);
 }
 
 .night-grey .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(102, 102, 102, 0.5);
+    background-color: rgba(102, 102, 102, 0.6);
 }
 
 .night-grey .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(102, 102, 102, 0.9);
+    background-color: rgba(102, 102, 102, 1);
 }
 
