Demo of customizing IBus in gnome-shell for theme.
When user chooses a theme from the list, this extension will first read the theme CSS file, extract the IBus related style classes (.candidate-*), then write it to extension’s stylesheet.css. Finally restart the GNOME shell.

Signed-off-by: Hollow Man <hollowman@hollowman.ml>

--- a/customize-ibus@hollowman.ml/stylesheet.css
+++ b/customize-ibus@hollowman.ml/stylesheet.css
@@ -1,185 +1,1 @@
-
-
-/*
- *   Common
- */
-
-
-.ibus-tweaker-candidate-popup-content {
-    border-radius: 3px;
-    border-width: 1px;
-    padding: 0;
-}
-
-.ibus-tweaker-candidate-popup-text {
-    border-width: 0;
-    border-bottom-width: 1px;
-    padding: 0;
-}
-
-.ibus-tweaker-candidate-box {
-    transition-duration: 100ms;
-    border-radius: 0;
-    padding: 8px;
-}
-
-/* hide page buttons */
-.ibus-tweaker-candidate-page-button,
-.ibus-tweaker-candidate-page-button-box,
-.ibus-tweaker-candidate-page-button-previous,
-.ibus-tweaker-candidate-page-button-next,
-.ibus-tweaker-candidate-page-button-icon {
-    width: 0 !important;
-    height: 0 !important;
-    border-width: 0 !important;
-    color: transparent !important;
-    background-color: transparent !important;
-}
-
-.ibus-tweaker-candidate-popup-boxpointer {
-    -arrow-background-color: transparent;
-    -arrow-border-radius: 12px;
-    -arrow-rise: 5px;
-}
-
-/*
- *   Text
- */
-
-
-.ibus-tweaker-candidate-popup-content {
-    color: rgba(0, 0, 0, 0.95);
-    background-color: rgba(255, 255, 255, 1);
-}
-
-.ibus-tweaker-candidate-box:selected {
-    color: rgba(0, 0, 0, 1);
-}
-
-.ibus-tweaker-candidate-box .ibus-tweaker-candidate-index {
-    color: rgba(0, 0, 0, 0.6);
-}
-
-/*
- *   Colors
- */
-
-
-/*
- *  #FC8E9F
- */
-.red .ibus-tweaker-candidate-popup-content,
-.red .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(252, 142, 159, 0.95);
-}
-
-.red .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(252, 142, 159, 0.6);
-}
-
-.red .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(252, 142, 159, 0.95);
-}
-
-
-/*
- *  #8FF0A4
- */
-.green .ibus-tweaker-candidate-popup-content,
-.green .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(143, 240, 164, 0.95);
-}
-
-.green .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(143, 240, 164, 0.6);
-}
-
-.green .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(143, 240, 164, 0.95);
-}
-
-
-/*
- *  #FFBE6F
- */
-.orange .ibus-tweaker-candidate-popup-content,
-.orange .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(255, 190, 111, 0.95);
-}
-
-.orange .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(255, 190, 111, 0.6);
-}
-
-.orange .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(255, 190, 111, 0.95);
-}
-
-
-/*
- *  #99C1F1
- */
-.blue .ibus-tweaker-candidate-popup-content,
-.blue .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(153, 193, 241, 0.95);
-}
-
-.blue .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(153, 193, 241, 0.6);
-}
-
-.blue .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(153, 193, 241, 0.95);
-}
-
-
-/*
- *  #DC8ADD
- */
-.purple .ibus-tweaker-candidate-popup-content,
-.purple .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(220, 138, 221, 0.95);
-}
-
-.purple .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(220, 138, 221, 0.6);
-}
-
-.purple .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(220, 138, 221, 0.95);
-}
-
-
-/*
- *  #ABECED
- */
-.turquoise .ibus-tweaker-candidate-popup-content,
-.turquoise .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(171, 236, 237, 0.95);
-}
-
-.turquoise .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(171, 236, 237, 0.6);
-}
-
-.turquoise .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(171, 236, 237, 0.95);
-}
-
-
-/*
- *  #C0BFBC
- */
-.grey .ibus-tweaker-candidate-popup-content,
-.grey .ibus-tweaker-candidate-popup-text {
-    border-color: rgba(192, 191, 188, 0.95);
-}
-
-.grey .ibus-tweaker-candidate-box:hover {
-    background-color: rgba(192, 191, 188, 0.6);
-}
-
-.grey .ibus-tweaker-candidate-box:selected {
-    background-color: rgba(192, 191, 188, 0.95);
-}
-
+/* temporary empty */
